--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -59,9 +59,7 @@ $border-color: rgba($text-muted, .24) !default;
 $hover-bg: $light !default;
 $active-bg: rgba($blue, .06) !default;
 
-$dark-body-bg: #222935 !default;
-$dark-body-color: #afbdd1 !default;
-$dark-border-color: rgba($dark-body-color, .4) !default;
+$dark-body-bg: darken($dark, 3%) !default;
 
 $primary: $blue !default;
 $secondary: $text-muted !default;
