--- a/scss/layout/_mainnav.scss
+++ b/scss/layout/_mainnav.scss
@@ -1,5 +1,23 @@
+@mixin navbar-horizontal {
+  .d-none-navbar-horizontal,
+  ~ * .d-none-navbar-vertical-narrow {
+    display: none;
+  }
+
+  .dropdown-menu {
+    margin-top: -4px;
+    margin-right: -7px;
+  }
+}
+
 @mixin navbar-vertical-narrow {
   width: $sidenav-width-narrow;
+  overflow: visible;
+
+  .d-none-navbar-vertical-narrow,
+  ~ * .d-none-navbar-vertical-narrow {
+    display: none;
+  }
 
   .navbar-nav {
     margin-top: 0;
@@ -16,11 +34,9 @@
 
   .nav-link-icon {
     margin: 0 auto;
-  }
-
-  .d-none-navbar-vertical-narrow,
-  ~ * .d-none-navbar-vertical-narrow {
-    display: none;
+    font-size: 1.125rem;
+    width: 1.125rem;
+    height: 1.125rem;
   }
 
   .navbar-brand-logo-large {
@@ -36,11 +52,38 @@
     margin-left: $sidenav-width-narrow;
   }
 
+  .dropdown-toggle:after {
+    content: none;
+  }
+
+  .dropdown-menu {
+    left: 100%;
+    top: 0;
+    margin: 0 0 0 -4px;
+
+    &:before,
+    &:after {
+      content: none;
+    }
+
+    &.dropdown-menu-right {
+      top: auto;
+      bottom: 0;
+      right: auto;
+    }
+  }
+
   &.navbar-right {
     ~ .navbar,
     ~ .content {
       margin-left: 0;
       margin-right: $sidenav-width-narrow;
+    }
+
+    .dropdown-menu {
+      margin: 0 -4px 0 0;
+      left: auto;
+      right: 100%;
     }
   }
 }
@@ -112,7 +155,7 @@
 
     .nav-item {
       &.active {
-        background: rgba($sidenav-active-accent-color, .032);
+        font-weight: 600;
 
         &:before {
           left: 0;
@@ -150,27 +193,42 @@
     }
   }
 
-  .dropdown-menu {
-    position: static;
-    background: inherit;
-    border: 0;
-    box-shadow: none;
-    padding: 0;
-    margin: 0;
-    color: inherit;
-  }
+  &:not(.navbar-vertical-narrow) {
+    .d-none-navbar-vertical-wide,
+    ~ * .d-none-navbar-vertical-wide {
+      display: none;
+    }
 
-  .dropdown-item {
-    color: inherit;
-    padding-left: add($sidenav-padding, 1.5rem);
-  }
+    .dropdown-menu {
+      position: static;
+      background: inherit;
+      border: 0;
+      box-shadow: none;
+      padding: 0;
+      margin: 0;
+      color: inherit;
+      columns: 1;
 
-  .dropdown-item-icon {
-    display: none;
-  }
+      &:before,
+      &:after {
+        content: none;
+      }
+    }
 
-  .dropdown-toggle:after {
-    margin-left: auto;
+    .dropdown-item {
+      padding-left: add($sidenav-padding, 1.5rem);
+      opacity: $text-muted-opacity;
+
+      &:hover {
+        background: transparent;
+        color: inherit;
+        opacity: 1;
+      }
+    }
+
+    .dropdown-toggle:after {
+      margin-left: auto;
+    }
   }
 
   &.navbar-vertical-narrow {
@@ -282,6 +340,33 @@ Navbar brand
 /**
 Navbar colors
  */
+.navbar {
+  .navbar-nav {
+    .nav-link {
+      color: inherit;
+      opacity: $text-muted-opacity;
+
+      &:hover {
+        color: inherit;
+        opacity: 1;
+      }
+
+      &.disabled {
+        color: inherit;
+        opacity: $text-muted-opacity / 3;
+      }
+    }
+
+    .show > .nav-link,
+    .active > .nav-link,
+    .nav-link.show,
+    .nav-link.active {
+      color: inherit;
+      opacity: 1;
+    }
+  }
+}
+
 .navbar-light {
   background: $white;
   box-shadow: inset 0 -1px 0 0 $border-color;
@@ -291,6 +376,7 @@ Navbar colors
 .navbar-dark {
   background: $sidenav-dark-bg;
   color: $sidenav-dark-color;
+  box-shadow: inset 0 -1px 0 0 $border-color;
   @include scrollbar(true);
 
   .text-muted {
@@ -299,7 +385,7 @@ Navbar colors
   }
 
   .navbar-brand-autodark {
-    filter: brightness(0) invert(1);
+    @include autodark-image;
   }
 
   .form-control {
@@ -314,9 +400,7 @@ Navbar vertical
  */
 @if $enable-navbar-vertical {
   .navbar:not(.navbar-vertical) {
-    .d-none-navbar-horizontal {
-      display: none;
-    }
+    @include navbar-horizontal;
   }
 
   .navbar-vertical {
@@ -327,9 +411,7 @@ Navbar vertical
         }
 
         @include media-breakpoint-down-than($breakpoint) {
-          .d-none-navbar-horizontal {
-            display: none;
-          }
+          @include navbar-horizontal;
         }
       }
     }
