--- a/scss/mixins/_mixins.scss
+++ b/scss/mixins/_mixins.scss
@@ -41,9 +41,7 @@
   }
 }
 
-@mixin dark {
-  .bg-dark &,
-  .theme-dark & {
-    @content;
-  }
+
+@mixin autodark-image {
+  filter: brightness(0) invert(1);
 }
