--- a/scss/ui/_buttons.scss
+++ b/scss/ui/_buttons.scss
@@ -1,13 +1,7 @@
 .btn-secondary {
   @include button-variant($white, $border-color, $dark);
-  background-image: linear-gradient(-180deg, rgba(0, 0, 0, 0), rgba($dark, .04) 100%);
+  background-image: linear-gradient(-180deg, rgba($dark, 0), rgba($dark, .04) 100%);
   box-shadow: none !important;
-
-  .bg-dark &,
-  .theme-dark & {
-    @include button-variant($min-white, $border-color, $light, rgba(0, 0, 0, 0), $border-color, $light);
-    background-image: none;
-  }
 }
 
 .btn-outlined-secondary {
